@@ -14,6 +14,7 @@
  - enhancement to remove more borders with graphborders set to no @matellis
  - add "literalsearch" option to filter targets using literal strings instead
  of regex @jlu5
+ - OpenSSH 9.8 compatibility for SSH Plugin @ermuller
 
 2021-08-13 08:12:06 +0200 Tobias Oetiker <tobi@oetiker.ch>
 
